--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>my second github repo</title>
 </head>
 <body>
+    <p>I can push to github</p>
+    <p>mama i can code now</p>
+    <p>new code changed</p>
     
 </body>
 </html>
