--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>I can push to github</p>
-    <p>mama i can code now</p>
-    <p>new code changed</p>
-    
+    <h1>I can push to github</h1>
+    <h2>mama i can code now</h2>
+    <h3>new code changed</h3>
+    <p>more paragraph</p>
+    <p>i am coding coding and coding</p>    
 </body>
 </html>
