--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>I can push to github</h1>
+    <h1>I can push to github.com</h1>
     <h2>mama i can code now</h2>
     <h3>new code changed to orange</h3>
     <p>more paragraph</p>
-    <p>i am coding coding and coding</p>    
+    <p>i am coding coding and coding</p>
+    <img src="family.webp" alt="">
+    <img src="man.webp" alt="">    
 </body>
 </html>
